# 3D-Renderer

./: .gitignore  CMakeLists.txt  README.md  object.txt
headers/: camera.h  color.h  light_source.h  mesh.h  point.h  quaternion.h  surface.h  triangle.h  utils.h  vector.h
src/: main.c
src/modules/: camera.c  color.c  light_source.c  mesh.c  point.c  quaternion.c  surface.c  triangle.c  utils.c  vector.c
